testkit: shared BaseClickHouseIntegrationTest + moved/expanded custom assertion
- New BaseClickHouseIntegrationTest (testkit): one static ClickHouseContainer
  shared across every subclass in every module (Testcontainers singleton
  pattern, started once per JVM, no explicit stop - Ryuk cleans up). A
  @BeforeEach hook drops every table before each test via SHOW TABLES/DROP
  TABLE sent over a plain synchronous java.net.http.HttpClient, deliberately
  not through this project's own transport, so cleanup can't depend on or
  mask a bug in the driver under test.
- Moved ClickHouseRowAssert from transport-http's test sources into
  testkit.assertions, so connector/integration-tests get it for free later.
  Added hasList/hasTuple/hasMap/hasEnumName/hasBigInteger/hasFloatCloseTo/
  hasInetAddress/hasUuid alongside the original four methods, replacing raw
  assertThat((SomeType) row.get(...)) casts in RealWorldTableAgainstRealClickHouseTest
  with domain-readable assertions.
- SelectOneAgainstRealClickHouseTest, QueryIdHeaderAgainstRealClickHouseTest,
  RealWorldTableAgainstRealClickHouseTest now extend BaseClickHouseIntegrationTest
  instead of each declaring their own @Container field.
- ROADMAP.md, docs/CURRENT_WORK.md: reflect the refactor.